# KanoopTorrentQt

./: CMakeLists.txt  Doxyfile  README.md  libKanoopTorrentQt.pc.in
.github/workflows/: ci.yaml
docs/: mainpage.md
docs/theme/: custom.css
include/Kanoop/torrent/: kanooptorrent.h  magnetlink.h  peerinfo.h  sessionstats.h  torrent.h  torrentclient.h  torrentcreator.h  torrentsearcher.h  torrentsearchresult.h
src/torrent/: magnetlink.cpp  torrent.cpp  torrentclient.cpp  torrentcreator.cpp  torrentsearcher.cpp  torrentsearchresult.cpp
